--- a/package.json
+++ b/package.json
@@ -2,10 +2,60 @@
   "name": "mvp",
   "version": "1.0.0",
   "description": "Hack Reactor Fullstack MVP Project (1/26/19-1/29/19)",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
+  "author": "Miles Manning",
+  "license": "ISC",
+  "engines": {
+    "node": ">=6.13.0"
   },
-  "author": "",
-  "license": "ISC"
+  "scripts": {
+    "server": "nodemon server/index.js",
+    "webpack": "webpack -d --watch",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage --colors"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "nodemon": "^1.18.9",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "lodash": "^4.17.11",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.18.9",
+    "webpack": "^4.28.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HROneForAll/fec-photo-gallery-service.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/milesmanning/hr_mvp/issues"
+  },
+  "homepage": "https://github.com/milesmanning/hr_mvp#readme",
+  "eslintIgnore": [
+    "/public/bundle.js",
+    "/coverage"
+  ],
+  "jest": {
+    "verbose": true,
+    "setupTestFrameworkScriptFile": "./test/src/setup.tests.js",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
+  }
 }
